Worked on mobile mode -- committing to test that out. Need to conditionally fix the connecting lines on mobile.

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,3 +30,9 @@ $georgia: Georgia, serif;
     @content;
   }
 }
+
+@mixin smallview {
+  @media screen and (max-width: 790px) {
+    @content;
+  }
+}
